Bug 385237 - Does not build with Qt 5.10
Summary: Does not build with Qt 5.10
Status: RESOLVED FIXED
Alias: None
Product: knotes
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-09-30 15:54 UTC by Fabian Vogt
Modified: 2017-11-08 20:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2017-09-30 15:54:24 UTC
[   77s] In file included from /home/abuild/rpmbuild/BUILD/knotes-17.11.80git.20170928T194220~eb89ec0/src/configdialog/knoteconfigdialog.cpp:25:0:
[   77s] /home/abuild/rpmbuild/BUILD/knotes-17.11.80git.20170928T194220~eb89ec0/src/configdialog/knotecollectionconfigwidget.h:86:5: error: 'QSortFilterProxyModel' does not name a type; did you mean 'QAbstractProxyModel'?
[   77s]      QSortFilterProxyModel *mCollectionFilter = nullptr;

and after that is fixed by adding class QSortFilterProxyModel in an #else:

[  166s] /home/abuild/rpmbuild/BUILD/knotes-17.11.80git.20170929T232627~747148a/src/kontactplugin/knotes_plugin.cpp:157:99: error: no matching function for call to 'KCalCore::MemoryCalendar::MemoryCalendar(QTimeZone)'
[  166s]          KCalCore::MemoryCalendar::Ptr cal(new KCalCore::MemoryCalendar(QTimeZone::systemTimeZone()));
Comment 1 Laurent Montel 2017-09-30 16:53:33 UTC
Git commit cd27bc900550b35dee2ee2ed89a6ff5ae702549e by Montel Laurent.
Committed on 30/09/2017 at 16:53.
Pushed by mlaurent into branch 'master'.

Fix compile against qt5.10

M  +2    -0    src/configdialog/knotecollectionconfigwidget.h

https://commits.kde.org/knotes/cd27bc900550b35dee2ee2ed89a6ff5ae702549e
Comment 2 Christophe Marin 2017-11-08 20:34:06 UTC
note that it also fails to build with Clang : 

knotes/src/configdialog/knoteconfigdialog.cpp:213:86: error: 'changed' is a protected member of 'KCModule'
    connect(mDefaultTitle, &QLineEdit::textChanged, this, QOverload<>::of(&KCModule::changed));
                                                                           ~~~~~~~~~~^~~~~~~
/kde/inst/5/include/KF5/KConfigWidgets/kcmodule.h:377:10: note: must name member using the type of the current context 'KNoteMiscConfig'
    void changed();
         ^