Fix compile against qt5.10

BUG: 385237